--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+,<link rel="stylesheet" href=""><!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -7,8 +7,12 @@
     <title>DSMovie</title>
      <!-- Bootstrap CSS -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+     <link rel="stylesheet" href="css\styles.css">
 </head>
 <body>
-    
+    <h1>Olá DSMovie!</h1>
+    <h2>Promoções</h2>
+    <h2>Agenda de Filmes</h2>
 </body>
 </html>
