Barra superior PARTE 2
Barra superior PARTE 2

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <header>
         <nav class="container">
             <h1>DSMovie</h1>
-            <a href="https://github.com/leandrojs82">/leandrojs82</a>
+            <div class="dsmovie-contact-container">
+                <img src="img/github.svg" alt="GitHub">
+                <a href="https://github.com/leandrojs82">/leandrojs82</a>
+            </div>
         </nav>
     </header>
 </body>
