--- a/index.html
+++ b/index.html
@@ -20,5 +20,19 @@
             </div>
         </nav>
     </header>
+
+
+    <main>
+        <section id="dsmovie-card-list" class="container">
+            <div class="dsmovie-card">
+                <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k66wW641A5Tok6OHMAsCbxM0UpG.jpg" alt="Sherlock">
+                <div class="dsmovie-card-description">
+                    <h3>Sherlock</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
+            </div>
+        </section>
+
+    </main>
 </body>
 </html>
