Polimento da listagem
Polimento da listagem

--- a/index.html
+++ b/index.html
@@ -51,7 +51,19 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k66wW641A5Tok6OHMAsCbxM0UpG.jpg" alt="Sherlock">
                         <div class="dsmovie-card-description">
                             <h3>Sherlock</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>10 avaliações</p>                           
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -61,7 +73,19 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k66wW641A5Tok6OHMAsCbxM0UpG.jpg" alt="Sherlock">
                         <div class="dsmovie-card-description">
                             <h3>Sherlock</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>10 avaliações</p>                           
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -71,7 +95,19 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k66wW641A5Tok6OHMAsCbxM0UpG.jpg" alt="Sherlock">
                         <div class="dsmovie-card-description">
                             <h3>Sherlock</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>10 avaliações</p>                           
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -81,7 +117,19 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k66wW641A5Tok6OHMAsCbxM0UpG.jpg" alt="Sherlock">
                         <div class="dsmovie-card-description">
                             <h3>Sherlock</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>10 avaliações</p>                           
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -91,7 +139,19 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k66wW641A5Tok6OHMAsCbxM0UpG.jpg" alt="Sherlock">
                         <div class="dsmovie-card-description">
                             <h3>Sherlock</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>10 avaliações</p>                           
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -101,7 +161,19 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k66wW641A5Tok6OHMAsCbxM0UpG.jpg" alt="Sherlock">
                         <div class="dsmovie-card-description">
                             <h3>Sherlock</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>10 avaliações</p>                           
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -111,7 +183,19 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k66wW641A5Tok6OHMAsCbxM0UpG.jpg" alt="Sherlock">
                         <div class="dsmovie-card-description">
                             <h3>Sherlock</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>10 avaliações</p>                           
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -121,7 +205,19 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k66wW641A5Tok6OHMAsCbxM0UpG.jpg" alt="Sherlock">
                         <div class="dsmovie-card-description">
                             <h3>Sherlock</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>10 avaliações</p>                           
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -131,7 +227,19 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k66wW641A5Tok6OHMAsCbxM0UpG.jpg" alt="Sherlock">
                         <div class="dsmovie-card-description">
                             <h3>Sherlock</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>10 avaliações</p>                           
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -141,7 +249,19 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k66wW641A5Tok6OHMAsCbxM0UpG.jpg" alt="Sherlock">
                         <div class="dsmovie-card-description">
                             <h3>Sherlock</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>10 avaliações</p>                           
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -151,10 +271,23 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k66wW641A5Tok6OHMAsCbxM0UpG.jpg" alt="Sherlock">
                         <div class="dsmovie-card-description">
                             <h3>Sherlock</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>10 avaliações</p>                           
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
+
 
             </div>
         </section>
