--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
     </header>
     <main>
         <section id="dsmovie-card-list" class="container">
+
+            <div class="dsmovie-pagination-continer">
+                <div class="dsmovie-pagination-box">
+                    <button disabled>
+                        <img src="img/arrow.svg" alt="voltar">
+                    </button>
+                    <p>1 de 23</p>
+                    <button>
+                        <img class="dsmovie-flip-horizontal" src="img/arrow.svg" alt="proxima">
+                    </button>
+                </div>
+            </div>
+
             <div class="row">
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
